tests/error/null_auto.gw
#! [contains] NullPtrException
int i[];
for(auto a : i)
 <<< a >>>;
